--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 torch==1.8.1
 opencv-python==4.4.0.46
-einops
-scipy
-h5py
-hdf5storage
-tqdm
-imageio
-scikit-image
+einops==0.6.1
+scipy==1.10.1
+h5py==3.9.0
+hdf5storage==0.1.19
+tqdm==4.65.0
+imageio==2.31.1
+scikit-image==0.21.0
 scikit-learn
 
